fix(components): align minimal fields with label (#1239)
* fix(components): align minimal fields with label

* fix: account for border

--- a/packages/components/src/styles/Input.module.css
+++ b/packages/components/src/styles/Input.module.css
@@ -36,6 +36,7 @@
 
 .minimal {
   background-color: inherit;
+  margin-left: calc(-1 * var(--lp-spacing-300) - 1px);
 
   &:not([data-invalid]) {
     border-color: transparent;
